[DEV-815-add-hide-data-link-checkbox] Fixed CSS spacing on data table link but can't get tooltip question mark right size on editor

--- a/packages/dashboard/src/scss/main.scss
+++ b/packages/dashboard/src/scss/main.scss
@@ -324,3 +324,7 @@
     margin: 1em 0;
   }
 }
+
+.margin-href {
+  margin-left: 15px !important;
+}
